# -*- coding: utf-8 -*-

2010-04-21  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/contents_command.rb:  Make --prefix the
	  default as specified in --help.  Bug #27211 by Mamoru Tasaka.
	* lib/rubygems/commands/environment_command.rb:  Hide gemcutter_key to
	  for security.

2010-04-21  Evan Phoenix <evan@fallingsnow.net>

	* lib, test: Add ability to install and fetch to report that the
	  reason they couldn't find a gem was because all available gems can't
	  be used on the current platform.

2010-04-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Avoid deprecated API for YAML.  Ruby
	  bug #3102 by Aaron Patterson.
	* lib/rubygems/remote_fetcher.rb:  Avoid deprecated API for URI.  Ruby
	  bug #3103 by Aaron Patterson.
	* lib/rubygems/platform.rb:  Add platform support for IronRuby.  Patch
	  #27951 by Will Green.
	* lib/rubygems/commands/fetch_command.rb:  Restore fetching of old
	  versions.  Bug #27960 by Eric Hankins.
	* lib/rubygems/command_manager.rb:  Update documentation.  Bug #28024
	  by Roger Pack.
	* lib/rubygems/remote_fetcher.rb:  Raise a better error when the host
	  is down.  Bug #28092 by Eric Peterson.
	* History.txt:  Add reminder to include --user-install change in the
	  1.3.7 release notes.  Bug #27896 by Matt Patterson.
	* lib/rubygems/commands/query_command.rb:  --version is only for use
	  with --installed.  Bug #27857 by Greg Hazel.
	* lib/rubygems/commands/query_command.rb:  Regular output now lists
	  platforms.  Bug #27856 by Greg Hazel.

2010-04-19  Eric Hodel  <drbrain@segment7.net>

	* lib, test: Stop using Gem::RubyGemsVersion

2010-04-14  James Tucker <jftucker@gmail.com>

	* lib/rubygems/command_manager.rb: Now catches errors caused by command
	  loading. (Protect against broken plugins)
	* lib/rubygems.rb: Introduce and use Gem.load_plugins, RubyGems now
	  protects against exceptions being raised by plugins.

2010-03-25  Eric Hodel  <drbrain@segment7.net>
