@@ -33,6 +33,8 @@ require 'rubygems/doc_manager'
 
 class Gem::Server
 
+  attr_reader :spec_dirs
+
   include ERB::Util
   include Gem::UserInteraction
 
@@ -430,29 +432,33 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
         options[:addresses]).run
   end
 
-  def initialize(gem_dir, port, daemon, addresses = nil)
+  def initialize(gem_dirs, port, daemon, addresses = nil)
     Socket.do_not_reverse_lookup = true
 
-    @gem_dir = gem_dir
+    @gem_dirs = Array gem_dirs
     @port = port
     @daemon = daemon
     @addresses = addresses
     logger = WEBrick::Log.new nil, WEBrick::BasicLog::FATAL
     @server = WEBrick::HTTPServer.new :DoNotListen => true, :Logger => logger
 
-    @spec_dir = File.join @gem_dir, 'specifications'
+    @spec_dirs = @gem_dirs.map do |gem_dir|
+      spec_dir = File.join gem_dir, 'specifications'
 
-    unless File.directory? @spec_dir then
-      raise ArgumentError, "#{@gem_dir} does not appear to be a gem repository"
+      unless File.directory? spec_dir then
+        raise ArgumentError, "#{gem_dir} does not appear to be a gem repository"
+      end
+
+      spec_dir
     end
 
-    @source_index = Gem::SourceIndex.from_gems_in @spec_dir
+    @source_index = Gem::SourceIndex.from_gems_in(*@spec_dirs)
   end
 
   def Marshal(req, res)
     @source_index.refresh!
 
-    res['date'] = File.stat(@spec_dir).mtime
+    add_date res
 
     index = Marshal.dump @source_index
 
@@ -471,12 +477,18 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
     res.body << index
   end
 
+  def add_date res
+    res['date'] = @spec_dirs.map do |spec_dir|
+      File.stat(spec_dir).mtime
+    end.max
+  end
+
   def latest_specs(req, res)
     @source_index.refresh!
 
     res['content-type'] = 'application/x-gzip'
 
-    res['date'] = File.stat(@spec_dir).mtime
+    add_date res
 
     specs = @source_index.latest_specs.sort.map do |spec|
       platform = spec.original_platform
@@ -535,7 +547,7 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
     @source_index.refresh!
 
     res['content-type'] = 'text/plain'
-    res['date'] = File.stat(@spec_dir).mtime
+    add_date res
 
     case req.request_uri.path
     when '/quick/index' then
@@ -586,7 +598,7 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
 
   def root(req, res)
     @source_index.refresh!
-    res['date'] = File.stat(@spec_dir).mtime
+    add_date res
 
     raise WEBrick::HTTPStatus::NotFound, "`#{req.path}' not found." unless
       req.path == '/'
@@ -771,7 +783,7 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
 
     @server.mount_proc("/gem-server-rdoc-style.css") do |req, res|
       res['content-type'] = 'text/css'
-      res['date'] = File.stat(@spec_dir).mtime
+      add_date res
       res.body << RDOC_CSS
     end
 
@@ -794,7 +806,7 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
   def specs(req, res)
     @source_index.refresh!
 
-    res['date'] = File.stat(@spec_dir).mtime
+    add_date res
 
     specs = @source_index.sort.map do |_, spec|
       platform = spec.original_platform
@@ -821,7 +833,7 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
   def yaml(req, res)
     @source_index.refresh!
 
-    res['date'] = File.stat(@spec_dir).mtime
+    add_date res
 
     index = @source_index.to_yaml
 
